--- a/benq/WEB-INF/web.xml
+++ b/benq/WEB-INF/web.xml
@@ -8,4 +8,13 @@
         <servlet-name>loginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>userSaveServlet</servlet-name>
+        <servlet-class>com.benq.oa.servlet.UserSaveServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>userSaveServlet</servlet-name>
+        <url-pattern>/user/save</url-pattern>
+    </servlet-mapping>
 </web-app>
